--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List OOP</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div id="main-container">
+        <div id="add-container">
+            <h2>Adicione suas tarefas!</h2>
+            <form action="">
+                <input type="text" id="task" name="task" placeholder="O que você tem para fazer?">
+                <button type="submit" id="add"><i class="fa fa-plus"></i></button>
+            </form>
+        </div>
+        <div id="tasks-container">
+            <h2>Veja suas tarefas:</h2>
+            <!-- TEMPLATE -->
+            <div class="task">
+                <i class="fa fa-check"></i>
+                <span class="task-title">Título da tarefa</span>
+                <i class="fa fa-trash"></i>
+            </div>
+            <!-- FIM TEMPLATE -->
+            <p id="empty-tasks">Não há tarefas cadastradas.</p>
+        </div>
+    </div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
